//
// Copyright (c) 2000-2018 TeamDev. All rights reserved.
// TeamDev PROPRIETARY and CONFIDENTIAL.
// Use is subject to license terms.
//

syntax = "proto3";

package spine.users.c.signin.identity;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.users.signin.identity";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/core/user_id.proto";
import "spine/users/c/user/user.proto";
import "spine/users/identifiers.proto";
import "spine/users/user_profile.proto";
import "spine/users/c/user/user_attribute.proto";
import "spine/users/user_auth_identity.proto";

// The event is emitted when the user status is retrieved from the identity provider.
//
message UserStatusChecked {

    RemoteIdentityProviderId id = 1;

    // The ID of the user.
    spine.core.UserId user_id = 2;

    // An identity used to check the status.
    UserAuthIdentity identity = 3 [(required) = true];

    // The retrieved status.
    user.User.Status status = 4 [(required) = true];
}

// The event is emitted when details about a user were fetched from the identity provider.
//
message UserDetailsFetched {
    option (events) = "UserDetailsFetched";

    RemoteIdentityProviderId id = 1;

    // The ID of the user.
    spine.core.UserId user_id = 2;

    // An identity used to check the status.
    UserAuthIdentity identity = 3 [(required) = true];

    // A filled in user profile.
    UserProfile profile = 4;

    // Any additional attributes fetched from the identity provider.
    repeated user.UserAttribute attribute = 5;
}
